Fix home tiles on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,7 +89,6 @@ a {
     font-size: 1.3rem;
     // margin-top: 10px;
     padding: 0;
-    top: 5%;
   }  
 
   @include large {
